# checker

./: .editorconfig  Cargo.toml  README.md  justfile
.github/workflows/: build.yaml  ci.yml
src/: check.rs  client.rs  common.rs  data.rs  error.rs  lib.rs  main.rs  opt.rs  package.rs  status.rs  table.rs
