[package]
name        = "checker"
version     = "0.0.1"
authors     = ["Liam <liam@scalzulli.com>"]
edition     = "2018"
description = "A crates.io crate name availability checker"
repository  = "https://github.com/terror/checker"
homepage    = "https://github.com/terror/checker"
license     = "MIT"

[dependencies]
structopt = "0.3"
reqwest   = { version = "0.11", features = ["blocking", "json"] }
