[package]
name          = "checker"
version       = "0.0.2"
authors       = ["Liam <liam@scalzulli.com>"]
edition       = "2018"
description   = "A crates.io crate name availability checker"
repository    = "https://github.com/terror/checker"
homepage      = "https://github.com/terror/checker"
documentation = "https://docs.rs/checker"
license       = "MIT"

[dependencies]
chrono         = "0.4.19"
prettytable-rs = "^0.8"
reqwest        = { version = "0.11", features = ["blocking", "json"] }
serde          = { version = "1.0", features  = ["derive"] }
serde_json     = "1.0"
structopt      = "0.3"
