[package]
name          = "checker"
version       = "0.0.3"
authors       = ["Liam <liam@scalzulli.com>"]
edition       = "2018"
description   = "A crates.io crate name availability checker"
repository    = "https://github.com/terror/checker"
homepage      = "https://github.com/terror/checker"
documentation = "https://docs.rs/checker"
license       = "CC0-1.0"
categories    = ["command-line-utilities"]
keywords      = ["command-line", "crates-io"]
resolver      = "2"

[[bin]]
name = "checker"
doc  = false

[dependencies]
chrono         = "0.4.19"
prettytable-rs = "^0.8"
serde_json     = "1.0.0"
snafu          = "0.6.10"
structopt      = "0.3.0"

[dependencies.reqwest]
version  = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version  = "1.0"
features = ["derive"]
